--- a/book-output/it-in-metaphor-ebook.html
+++ b/book-output/it-in-metaphor-ebook.html
@@ -443,7 +443,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Enjoy!</span><br>
 <span id="revnumber">version 0.1.0,</span>
-<span id="revdate">2019-05-22</span>
+<span id="revdate">2019-05-24</span>
 </div>
 <div id="toc" class="toc">
 <div id="toctitle">Table of Contents</div>
@@ -452,6 +452,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul class="sectlevel2">
 <li><a href="#_software_shipping">Software Shipping</a></li>
 <li><a href="#_use_containers_to_ship">Use containers to ship</a></li>
+</ul>
+</li>
+<li><a href="#it-terms">Terms</a>
+<ul class="sectlevel2">
+<li><a href="#_cloud">Cloud</a></li>
+<li><a href="#_internet">Internet</a></li>
+<li><a href="#_cloud_developer">Cloud Developer</a></li>
 </ul>
 </li>
 </ul>
@@ -495,11 +502,58 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="it-terms">Terms</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_cloud">Cloud</h3>
+<div class="quoteblock">
+<blockquote>
+<div class="paragraph">
+<p>Cloud is like buying electricity from the power grid instead of building you own powerplant. You don&#8217;t need to spend months on getting up and running but can use a lot of different lego blocks immediately.</p>
+</div>
+</blockquote>
+<div class="attribution">
+&#8212; Marek K.<br>
+<cite>@marekq</cite>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_internet">Internet</h3>
+<div class="quoteblock">
+<blockquote>
+<div class="paragraph">
+<p>The internet is a series of tubes. It takes good plumbers to figure out which tubes to stick together to make the right stuff flow to the right places.</p>
+</div>
+</blockquote>
+<div class="attribution">
+&#8212; Tom Bray<br>
+<cite>@tombray</cite>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_cloud_developer">Cloud Developer</h3>
+<div class="quoteblock">
+<blockquote>
+<div class="paragraph">
+<p>Imagine a giant office building that has different people who all have different jobs. Now picture the same building full of different computers that have different jobs. I send messages to that building.</p>
+</div>
+</blockquote>
+<div class="attribution">
+&#8212; TigerJ<br>
+<cite>@stalkjimmy</cite>
+</div>
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
 Version 0.1.0<br>
-Last updated 2019-05-22 18:02:31 UTC
+Last updated 2019-05-24 19:07:21 UTC
 </div>
 </div>
 </body>
